Bug 19749: Fix css issues on IE
git-svn-id: http://talendforge.org/svn/tom/trunk@59447 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.mdm.webapp.itemsbrowser2/war/Itemsbrowser2.css
+++ b/org.talend.mdm.webapp.itemsbrowser2/war/Itemsbrowser2.css
@@ -27,6 +27,12 @@
   padding: 12px;
 }
 
+/* extjs and gxt conflicts : override of gxt standard.css rules */
+body, table td, select {
+  font-family: tahoma, verdana, helvetica, Arial Unicode MS, Arial, sans-serif;
+  font-size: 12px;
+}
+
 /* solve menu item css problems, extjs and gxt */
 .x-menu-item {
     padding: 3px 21px 3px 27px !important;
